--- a/PSM.Barcode.Server/appsettings.json
+++ b/PSM.Barcode.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PSM-PS; Database=PSM; Trusted_Connection=True; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
