--- a/PSM.Barcode.Server/appsettings.json
+++ b/PSM.Barcode.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PSM-PS; Database=PSM; Trusted_Connection=True; TrustServerCertificate=True"
+    "DefaultConnection": "Server=PSM-PS; Database=PSM; Trusted_Connection=True; TrustServerCertificate=True; MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
